# MADS-Grupo4-ProjetoTabacarias

./: Projeto_Tabacarias.ipynb  README.md  projeto_tabacarias.py
mads_tabacarias/mads_tabacarias/: README.md  pyproject.toml
mads_tabacarias/mads_tabacarias/mads_tabacarias/: __init__.py  projeto_tabacarias.py
