[project]
name = "mads-tabacarias"
version = "0.1.1"
description = "Sistema de gestão de tabacarias"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "matplotlib",
    "folium",
    "requests"
]
authors = [
    {name = "João Azevedo", email = "a043056@ipmaia.pt"},
    {name = "João Serrano", email = "a043172@ipmaia.pt"},
    {name = "Gustavo Rodrigues", email = "a047953@ipmaia.pt"},
    {name = "Pedro Pires", email = "a045281@ipmaia.pt"}
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"